# tikhonov_agent

./: .gitignore  README.md  main.py  pyproject.toml  run_pinn_full_training_pilot.py  run_pinn_recovery_pilot_v2.py
.ipynb_checkpoints/: README-checkpoint.md
configs/: default.yaml  example_case.yaml
data/: demo_temperature.csv
demos/: demo_local_qwen_normalizer.py  demo_semistructured_input.py  demo_structured_input.py  validate_multi_solver.py
docs/: architecture_v1.1.md  architecture_v1.2.md  multi_solver_pilot_note.md  pde_schema_design.md
experiments/: README.md  analyze_results.py  generate_cases.py  generate_stress_cases.py  plot_results.py  plot_stress_results.py  run_benchmark.py  run_multi_solver_pilot.py  run_simple_multisolver_benchmark.py  run_stress_benchmark.py  utils.py
reports/: benchmark_2d_layout_note.csv  benchmark_2d_v1_results.csv  benchmark_2d_v2_note.md  benchmark_2d_v2_results.csv  benchmark_core_raw.csv  benchmark_core_report.md  benchmark_core_summary.csv  deepxde_integration_note.md  experiment_key_points.txt  experiment_report_for_advisor.md  final_integration_note.md  sensor_layout_track_raw.csv  sensor_layout_track_report.md  sensor_layout_track_summary.csv  simple_multisolver_benchmark.md  slide_figure_suggestions.md  stress_track_raw.csv  stress_track_report.md  stress_track_summary.csv  weekly_experiment_status.md
scripts/: plot_benchmark_2d_v1.py  plot_benchmark_2d_v2.py  run_benchmark_2d_v1.py  run_benchmark_2d_v2.py
src/: __init__.py  agent.py  deepxde_pinn_solver_2d.py  deepxde_solver.py  deepxde_solver_2d.py  parser.py  (+24 more)
(+2015 files in other folders)
